[fix]: Adding Service Insurers to the translate service3

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -734,6 +734,9 @@
             "DOCUMENTS": "Documentos",
             "COLLECTION": "Recaudo",
             "ADDDOCUMENTS": "Agregar Documentos"
+        },
+        "SERVICESINSURERS": {
+            "SERVICESINSURERS": "Servicios de Aseguradoras"
         }
     },
     "CONFIGURATION": {
