--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1831,7 +1831,8 @@
             "TYPECOLLECTIONS": "Tipo de Recaudos",
             "SENDEMAIL": "Enviar Correo",
             "MESSAGE": "Mensaje del Correo",
-            "GENERATESETTLEMENT": "Generar Finiquito"
+            "GENERATESETTLEMENT": "Generar Finiquito",
+            "STATUS": "Estatus"
         },
         "SERVICEREQUESTS": {
             "SERVICEREQUESTS": "Solicitudes de Servicio",
