--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1701,6 +1701,9 @@
             "MODEL": "Modelo",
             "VERSION": "Versión",
             "VEHICLESLIST": "Lista de Vehículos"
+        },
+        "FLEETLOADING": {
+            "FLEETLOADING": "Carga de Flotas"
         }
     },
     "EVENTS": {
