adding edit coverage

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1594,7 +1594,12 @@
             "RECEIPTTYPE": "Periodo de Vigencia del Recibo",
             "CHARGE": "Carga",
             "PLAN": "Lista de Coberturas del",
-            "SERVICE": "Lista de Servicios del Plan "
+            "SERVICE": "Lista de Servicios del Plan ",
+            "EDITCOVERAGE": "Editar Cobertura",
+            "CONTRACT": "Contrato",
+            "CODECOVERAGE": "Codigo de Cobertura",
+            "COVERAGE": "Cobertura",
+            "SUMASSURED": "Suma Asegurada"
         },
         "CLUBCONTRACTSMANAGEMENT": {
             "CLUBCONTRACTSMANAGEMENT": "Administración de Contratos por Club",
