[feat]: Adding Parent Policy Functionality from ArysAuto

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1704,6 +1704,9 @@
         },
         "FLEETLOADING": {
             "FLEETLOADING": "Carga de Flotas"
+        },
+        "PARENTPOLICY": {
+            "PARENTPOLICY":"Póliza Matriz"
         }
     },
     "EVENTS": {
