changes from settlement

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1837,7 +1837,8 @@
             "SENDEMAIL": "Enviar Correo",
             "MESSAGE": "Mensaje del Correo",
             "GENERATESETTLEMENT": "Generar Finiquito",
-            "STATUS": "Estatus"
+            "STATUS": "Estatus",
+            "MOTIVE": "Motivo"
         },
         "SERVICEREQUESTS": {
             "SERVICEREQUESTS": "Solicitudes de Servicio",
@@ -1936,7 +1937,8 @@
             "SENDEMAIL": "Enviar Correo",
             "CANCELLATIONCAUSE": "Causa de Anulación",
             "VEHICLE":"Vehículo",
-            "OWNER": "Propietario"
+            "OWNER": "Propietario",
+            "CAUSESETTLEMENT": "Causa del Finiquito"
         },
         "SETTLEMENT": {
             "SETTLEMENT": "Finiquito",
