--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -2221,6 +2221,9 @@
         },
         "PAYMENT-RECORD": {
             "PAYMENT-RECORD": "Registros de Pagos"
+        },
+        "BILL-LOADING": {
+            "BILL-LOADING": "Registro de Facturas"
         }
     },
     "REPORTS": {
