--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -737,6 +737,9 @@
         },
         "SERVICESINSURERS": {
             "SERVICESINSURERS": "Servicios de Aseguradoras"
+        },
+        "BRAND-MODEL-VERSION": {
+            "BRAND-MODEL-VERSION": "Marca - Modelo - Versión"
         }
     },
     "CONFIGURATION": {
