--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1763,6 +1763,59 @@
             "VERSION": "Versión",
             "VEHICLESLIST": "Lista de Vehículos"
         },
+        "FLEETCONTRACTBROKER": {
+            "FLEETCONTRACTBROKER": "Emisión de poliza individual",
+            "SEARCHCLUBCONTRACT": "Buscar Contrato por Club",
+            "CREATE": "Crear",
+            "SEARCH": "Buscar",
+            "DOCUMENTTYPE": "Tipo de Documento de Identificación",
+            "IDENTIFICATIONDOCUMENT": "Documento de Identificación",
+            "NAME": "Nombre",
+            "LASTNAME": "Apellido",
+            "CLUBCONTRACTSLIST": "Lista de Contratos por Club",
+            "CLUBCONTRACT": "Contrato Por Club",
+            "SAVE": "Guardar",
+            "EDIT": "Editar",
+            "CANCEL": "Cancelar",
+            "STARTDATE": "Fecha de Inicio",
+            "EXPIRATIONDATE": "Fecha de Vencimiento",
+            "RENOVATIONDATE": "Fecha de Renovación",
+            "ORIGIN": "Procedencia",
+            "OWNER": "Propietario",
+            "SEARCHOWNER": "Buscar Propietario",
+            "OWNERSLIST": "Lista de Propietarios",
+            "PLAN": "Plan",
+            "PLANTYPE": "Tipo de Plan",
+            "PAYMENTMETHODOLOGY": "Metodología de Pago",
+            "ACTIVE": "Activo",
+            "PAYMENTVOUCHERSLIST": "Lista de Comprobantes de Pago",
+            "ADDPAYMENTVOUCHER": "Agregar Comprobante de Pago",
+            "PAYMENTVOUCHER": "Comprobante de Pago",
+            "BANK": "Banco",
+            "CODE": "Código",
+            "REFERENCE": "Referencia",
+            "DELETE": "Eliminar",
+            "DRIVER": "Conductor",
+            "BIRTHDATE": "Fecha de Nacimiento",
+            "CIVILSTATUS": "Estado Civil",
+            "PROFESSION": "Profesión",
+            "OCCUPATION": "Ocupación",
+            "EMAIL": "Correo Electrónico",
+            "CELLPHONE": "Teléfono Celular",
+            "HOMEPHONE": "Teléfono de Casa",
+            "FAX": "Fax",
+            "STATE": "Estado",
+            "CITY": "Ciudad",
+            "ADDRESS": "Dirección",
+            "RELATIONSHIP": "Parentesco",
+            "VEHICLE": "Vehículo",
+            "SEARCHVEHICLE": "Buscar Vehículo",
+            "PLATE": "Placa",
+            "BRAND": "Marca",
+            "MODEL": "Modelo",
+            "VERSION": "Versión",
+            "VEHICLESLIST": "Lista de Vehículos"
+        },
         "PARENTPOLICY": {
             "PARENTPOLICY":"Póliza Matriz"
         }
