se implemento pantalla para las anulaciones de las polizas

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1818,6 +1818,9 @@
         },
         "PARENTPOLICY": {
             "PARENTPOLICY":"Póliza Matriz"
+        },
+        "POLICY-CANCELLATIONS": {
+            "POLICY-CANCELLATIONS": "Anulación de Pólizas"
         }
     },
     "EVENTS": {
