se esta añadiendo las pantallas del mantenimiento de los tomadores

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -814,7 +814,7 @@
             "CREATE": "Crear",
             "SEARCHCLAUSES": "Buscar Clausulas",
             "EXHIBIT": "Anexo",
-            "CLAUSES": "Clausulas",
+            "CLAUSES": "Configuración de Clausulas",
             "CLAUSESLIST": "Lista de Clausulas",
             "OBSERVATION": "Observación",
             "ACTIVE": "Activo",
@@ -824,6 +824,9 @@
             "ADDOBJETIVES": "Agregar Objetivos",
             "CREATEOBJETIVES": "Crear Objetivos",
             "OBJETIVES": "Objetivos"
+        },
+        "TAKERS": {
+            "TAKERS": "Configuración de Tomadores"
         }
     },
     "THIRDPARTIES": {
