se puso el nobre de tomadores

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1193,6 +1193,9 @@
             "PLANTYPE": "Tipo de Plan",
             "DATEFROM": "Fecha Desde",
             "DATETO": "Fecha Hasta"
+        },
+        "TAKERS": {
+            "TAKERS": "Tomadores"
         }
     },
     "PROVIDERS": {
